fix overflow problem of column

--- a/src/renderer/src/App.css
+++ b/src/renderer/src/App.css
@@ -3,6 +3,6 @@
   padding: 0;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
 }
